fixed a z-index issue with sticky headers for tables

--- a/assets/css/easy_admin.css
+++ b/assets/css/easy_admin.css
@@ -13,7 +13,7 @@ html body.easy-admin-fixed {
   right: 0;
   height: 42px;
   width: auto;
-  z-index:100; 
+  z-index:1000; 
 
   background-color: #333;
 /*  -moz-box-shadow: inset 0 0 10px #111;
